--- a/Examples/PresenceExample/Shared/MainLayout.razor
+++ b/Examples/PresenceExample/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="h-screen w-screen p-4 flex flex-col justify-between relative max-h-screen max-w-screen overflow-hidden">
 	<div class="absolute h-full w-full left-0 top-0 pointer-events-none" style="z-index: -1; opacity: 0.15; background-size: 16px 16px; background-image: linear-gradient(to right, gray 1px, transparent 1px), linear-gradient(gray 1px, transparent 1px);"></div>
-	<div class="flex flex-col h-full justify-between">
+	<div class="flex flex-col h-full justify-start md:justify-between">
 		@Body
 	</div>
 	<div class="absolute top-0 left-0 w-full h-full flex items-center justify-center space-x-2 pointer-events-none">
