--- a/Examples/PresenceExample/Pages/Index.razor
+++ b/Examples/PresenceExample/Pages/Index.razor
@@ -14,9 +14,9 @@
 <PageTitle>Realtime Example</PageTitle>
 
 <div class="flex justify-between">
-	<div class="dark:bg-brand-1200 bg-scale-200 border border-scale-500 dark:border-scale-300 p-3 rounded-md space-y-8 transition-all max-h-[70px] duration-500 overflow-hidden shadow-2xl dark:shadow-lg">
+	<div class="bg-gray-200 border border-scale-500 dark:border-scale-300 p-3 rounded-md space-y-8 transition-all max-h-[70px] duration-500 overflow-hidden shadow-2xl dark:shadow-lg">
 		<a href="https://github.com/supabase-community/supabase-csharp">
-			<img class="sm:w-300 xs:w-200 w-auto h-full" src="/logo.png" />
+			<img class="w-full md:w-48 h-full" src="/logo.png" />
 		</a>
 	</div>
 
