Add analytics snippet to realtime example

--- a/Examples/PresenceExample/Pages/Index.razor
+++ b/Examples/PresenceExample/Pages/Index.razor
@@ -16,7 +16,7 @@
 <div class="flex justify-between">
 	<div class="bg-gray-200 border border-scale-500 dark:border-scale-300 p-3 rounded-md space-y-8 transition-all max-h-[70px] duration-500 overflow-hidden shadow-2xl dark:shadow-lg">
 		<a href="https://github.com/supabase-community/supabase-csharp">
-			<img class="w-full md:w-48 h-full" src="/logo.png" />
+			<img class="w-full md:w-48 h-full max-w-xs" src="/logo.png" />
 		</a>
 	</div>
 
