--- a/Examples/PresenceExample/Pages/Index.razor
+++ b/Examples/PresenceExample/Pages/Index.razor
@@ -3,314 +3,313 @@
 @using PresenceExample.Components;
 @using PresenceExample.Models;
 @using Supabase.Realtime;
-@using Supabase.Realtime.Broadcast;
+@using Supabase.Realtime.Interfaces
 @using Supabase.Realtime.Models;
-@using Supabase.Realtime.Presence;
-@using System.Diagnostics;
-@using static Supabase.Realtime.Socket.SocketStateChangedEventArgs;
-@inject IJSRuntime JS;
-@inject Client realtime;
-@inject Blazored.LocalStorage.ISyncLocalStorageService localStorage;
+@inject IJSRuntime Js;
+@inject Client Realtime;
+@inject Blazored.LocalStorage.ISyncLocalStorageService LocalStorage;
 
 <PageTitle>Realtime Example</PageTitle>
 
 <div class="flex justify-between">
-	<div class="bg-gray-200 border border-scale-500 dark:border-scale-300 p-3 rounded-md space-y-8 transition-all max-h-[70px] duration-500 overflow-hidden shadow-2xl dark:shadow-lg">
-		<a href="https://github.com/supabase-community/supabase-csharp">
-			<img class="w-full md:w-48 h-full max-w-xs" src="/logo.png" />
-		</a>
-	</div>
+    <div class="bg-gray-200 border border-scale-500 dark:border-scale-300 p-3 rounded-md space-y-8 transition-all max-h-[70px] duration-500 overflow-hidden shadow-2xl dark:shadow-lg">
+        <a href="https://github.com/supabase-community/supabase-csharp">
+            <img class="w-full md:w-48 h-full max-w-xs" src="/logo.png"/>
+        </a>
+    </div>
 
-	<a href="https://github.com/supabase-community/realtime-csharp/tree/master/Examples/PresenceExample">
-		<img class="w-8 h-8" src="/github-mark-white.png" />
-	</a>
+    <a href="https://github.com/supabase-community/realtime-csharp/tree/master/Examples/PresenceExample">
+        <img class="w-8 h-8" src="/github-mark-white.png"/>
+    </a>
 </div>
 
 <div class="flex items-start flex-col pt-2">
-	<div class="my-1">
-		<button @onclick="HandleConnectionButton" class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-opacity-50 bg-brand-700 text-brand-1100 border border-brand-700">
-			@(userChannel?.IsJoined ?? false ? "Disconnect" : "Connect")
-		</button>
-	</div>
-	@if ((realtime?.Socket?.IsConnected ?? false) && (userChannel?.IsJoined ?? false))
-	{
-		<Pill Text="@($"Online: {userCount}")" />
-		<Pill Text="@($"{latency} ms")" />
-	}
+    <div class="my-1">
+        <button @onclick="HandleConnectionButton" class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-opacity-50 bg-brand-700 text-brand-1100 border border-brand-700">
+            @(_userChannel?.IsJoined ?? false ? "Disconnect" : "Connect")
+        </button>
+    </div>
+    @if ((Realtime?.Socket?.IsConnected ?? false) && (_userChannel?.IsJoined ?? false))
+    {
+        <Pill Text="@($"Online: {_userCount}")"/>
+        <Pill Text="@($"{_latency} ms")"/>
+    }
 </div>
 
-@foreach (var position in mousePositions)
+@foreach (var position in _mousePositions)
 {
-	<Cursor Color="@position.Color" UserId="@position.UserId" MouseX="@position.MouseX" MouseY="@position.MouseY" />
+    <Cursor Color="@position.Color" UserId="@position.UserId" MouseX="@position.MouseX" MouseY="@position.MouseY"/>
 }
 
 <div class="flex flex-col gap-1 absolute bottom-24 right-5 justify-end items-end overflow-hidden">
-	@foreach (var message in messages)
-	{
-		<Pill Text="@message.Content" Color="@message.Color" Size="md" />
-	}
+    @foreach (var message in _messages)
+    {
+        <Pill Text="@message.Content" Color="@message.Color" Size="md"/>
+    }
 </div>
 
 <div class="flex absolute bottom-10 right-5 w-3/4 md:w-1/3 h-10">
-	<InputText @ref="chatInput"
-			   @onfocus="HandleChatInputFocus"
-			   @onfocusout="HandleChatInputLostFocus"
-			   @bind-Value="chatMessage"
-			   @oninput="@((e) => { chatMessage=(string?)e.Value ?? "";})"
-			   placeholder="Send a message..."
-			   type="text"
-			   class="w-full bg-scale-500 h-10 rounded-lg px-2.5" />
+    <InputText @ref="_chatInput"
+               @onfocus="HandleChatInputFocus"
+               @onfocusout="HandleChatInputLostFocus"
+               @bind-Value="_chatMessage"
+               @oninput="@((e) => { _chatMessage = (string?)e.Value ?? ""; })"
+               placeholder="Send a message..."
+               type="text"
+               class="w-full bg-scale-500 h-10 rounded-lg px-2.5"/>
 </div>
 
 @code {
-	private bool isConnected = false;
-	private double latency = -1;
-	private int userCount = 0;
-	private bool isTyping = false;
+    private bool _isConnected;
+    private double _latency = -1;
+    private int _userCount;
+    private bool _isTyping;
 
-	private RealtimeChannel? userChannel;
-	private RealtimeBroadcast<MousePosition>? mousePositionBroadcast;
-	private RealtimePresence<BasePresence>? presence;
+    private RealtimeChannel? _userChannel;
+    private RealtimeBroadcast<MousePosition>? _mousePositionBroadcast;
+    private RealtimePresence<BasePresence>? _presence;
 
-	private RealtimeChannel? messageChannel;
-	private RealtimeBroadcast<Message>? messageBroadcast;
+    private RealtimeChannel? _messageChannel;
+    private RealtimeBroadcast<Message>? _messageBroadcast;
 
-	private DotNetObjectReference<Index>? objRef;
+    private DotNetObjectReference<Index>? _objRef;
 
-	private InputText? chatInput;
-	private string? chatMessage;
+    private InputText? _chatInput;
+    private string? _chatMessage;
 
-	private static Random rnd = new Random();
+    private static readonly Random Random = new Random();
 
-	private string? userColor;
-	private string userId
-	{
-		get
-		{
-			var id = localStorage.GetItem<string?>("userId");
-			if (string.IsNullOrEmpty(id))
-			{
-				id = Guid.NewGuid().ToString();
-				localStorage.SetItem("userId", id);
-			}
+    private string? _userColor;
 
-			return id!;
-		}
-	}
+    private string UserId
+    {
+        get
+        {
+            var id = LocalStorage.GetItem<string?>("userId");
+            if (string.IsNullOrEmpty(id))
+            {
+                id = Guid.NewGuid().ToString();
+                LocalStorage.SetItem("userId", id);
+            }
 
-	private List<MousePosition> mousePositions = new List<MousePosition>();
-	private List<Message> messages = new List<Message>();
-	private List<string> colorOptions = new List<string> { "slate", "stone", "red", "orange", "amber", "yellow", "green", "blue", "indigo", "purple", "fuchsia", "pink", "rose" };
+            return id;
+        }
+    }
 
-	override protected async Task OnInitializedAsync()
-	{
-		objRef = DotNetObjectReference.Create(this);
+    private readonly List<MousePosition> _mousePositions = new List<MousePosition>();
+    private readonly List<Message> _messages = new List<Message>();
+    private readonly List<string> _colorOptions = new List<string> { "slate", "stone", "red", "orange", "amber", "yellow", "green", "blue", "indigo", "purple", "fuchsia", "pink", "rose" };
 
-		await JS.InvokeAsync<double[]>("registerMouseMoveListener", objRef);
-		await JS.InvokeAsync<KeydownEvent>("registerKeydownListener", objRef);
+    protected override async Task OnInitializedAsync()
+    {
+        _objRef = DotNetObjectReference.Create(this);
 
-		realtime.OnOpen += (sender, args) => isConnected = args.State == ConnectionState.Open;
+        await Js.InvokeAsync<double[]>("registerMouseMoveListener", _objRef);
+        await Js.InvokeAsync<KeydownEvent>("registerKeydownListener", _objRef);
 
-		await realtime.ConnectAsync();
+        Realtime.AddStateChangedListener((_, state) => _isConnected = state != Constants.SocketState.Close);
 
-		userColor = colorOptions[rnd.Next(colorOptions.Count)];
+        await Realtime.ConnectAsync();
 
-		InitializeUserChannel();
-		InitializeMessageChannel();
-		InitializeLatencyTimer();
-		InitializeCleanupMousePositionsTimer();
-	}
+        _userColor = _colorOptions[Random.Next(_colorOptions.Count)];
 
-	public void Dispose()
-	{
-		objRef?.Dispose();
-		userChannel?.Unsubscribe();
-		messageChannel?.Unsubscribe();
-	}
+        InitializeUserChannel();
+        InitializeMessageChannel();
+        InitializeLatencyTimer();
+        InitializeCleanupMousePositionsTimer();
+    }
 
-	[JSInvokable]
-	public void HandleMouseMoved(double[] position)
-	{
-		mousePositionBroadcast?.Send(null, new MousePosition { UserId = userId, MouseX = position[0], MouseY = position[1], Color = userColor });
-	}
+    public void Dispose()
+    {
+        _objRef?.Dispose();
+        _userChannel?.Unsubscribe();
+        _messageChannel?.Unsubscribe();
+    }
 
-	[JSInvokable]
-	public void HandleKeydown(KeydownEvent keydownEvent)
-	{
-		switch (keydownEvent.key)
-		{
-			case "Enter":
-				if (!isTyping)
-					chatInput?.Element!.Value.FocusAsync();
-				else
-					SendMessage();
-				break;
-			case "Escape":
-				chatMessage = "";
-				StateHasChanged();
-				break;
-		}
-	}
+    [JSInvokable]
+    public void HandleMouseMoved(double[] position)
+    {
+        _mousePositionBroadcast?.Send(null, new MousePosition { UserId = UserId, MouseX = position[0], MouseY = position[1], Color = _userColor });
+    }
 
-	private async void HandleConnectionButton(MouseEventArgs args)
-	{
-		if (userChannel == null) return;
+    [JSInvokable]
+    public void HandleKeydown(KeydownEvent keydownEvent)
+    {
+        switch (keydownEvent.key)
+        {
+            case "Enter":
+                if (!_isTyping)
+                    _chatInput?.Element!.Value.FocusAsync();
+                else
+                    SendMessage();
+                break;
+            case "Escape":
+                _chatMessage = "";
+                StateHasChanged();
+                break;
+        }
+    }
 
-		if (userChannel.IsJoined)
-		{
-			userChannel?.Unsubscribe();
-		}
-		else
-		{
-			await userChannel.Subscribe();
-			presence!.Track(new BasePresence());
-		}
-		StateHasChanged();
-	}
+    private async void HandleConnectionButton(MouseEventArgs args)
+    {
+        if (_userChannel == null) return;
 
-	/// <summary>
-	/// Inits the user presence channel for mouse events
-	/// </summary>
-	private async void InitializeUserChannel()
-	{
-		userChannel = realtime.Channel("presence");
+        if (_userChannel.IsJoined)
+        {
+            _userChannel?.Unsubscribe();
+        }
+        else
+        {
+            await _userChannel.Subscribe();
+            _presence!.Track(new BasePresence());
+        }
+        StateHasChanged();
+    }
 
-		mousePositionBroadcast = userChannel.Register<MousePosition>(true, true);
-		mousePositionBroadcast.OnBroadcast += HandleMousePositionBroadcastReceived;
+    /// <summary>
+    /// Inits the user presence channel for mouse events
+    /// </summary>
+    private async void InitializeUserChannel()
+    {
+        _userChannel = Realtime.Channel("presence");
 
-		presence = userChannel.Register<BasePresence>(userId!);
-		presence.OnSync += HandlePresenceSync;
+        _mousePositionBroadcast = _userChannel.Register<MousePosition>(true, true);
+        _mousePositionBroadcast.AddBroadcastEventHandler(HandleMousePositionBroadcastReceived);
 
-		await userChannel.Subscribe();
+        _presence = _userChannel.Register<BasePresence>(UserId);
+        _presence.AddPresenceEventHandler(IRealtimePresence.EventType.Sync, HandlePresenceSync);
 
-		presence!.Track(new BasePresence());
-	}
+        await _userChannel.Subscribe();
 
-	/// <summary>
-	/// Inits the message channel for message broadcasts
-	/// </summary>
-	private async void InitializeMessageChannel()
-	{
-		messageChannel = realtime.Channel("messages");
+        _presence!.Track(new BasePresence());
+    }
 
-		messageBroadcast = messageChannel.Register<Message>(true, true);
-		messageBroadcast.OnBroadcast += HandleMessageBroadcastReceived;
+    /// <summary>
+    /// Inits the message channel for message broadcasts
+    /// </summary>
+    private async void InitializeMessageChannel()
+    {
+        _messageChannel = Realtime.Channel("messages");
 
-		await messageChannel.Subscribe();
-	}
+        _messageBroadcast = _messageChannel.Register<Message>(true, true);
+        _messageBroadcast.AddBroadcastEventHandler(HandleMessageBroadcastReceived);
 
-	/// <summary>
-	/// Removes old mousePositions after a set timeout.
-	/// </summary>
-	private void InitializeCleanupMousePositionsTimer()
-	{
-		var timer = new System.Timers.Timer();
+        await _messageChannel.Subscribe();
+    }
 
-		timer.Elapsed += (sender, elapsed) =>
-		{
-			mousePositions
-				.FindAll(x => x.AddedAt < (DateTime.Now - TimeSpan.FromSeconds(15)))
-				.ForEach(x => mousePositions.Remove(x));
-			StateHasChanged();
-		};
+    /// <summary>
+    /// Removes old mousePositions after a set timeout.
+    /// </summary>
+    private void InitializeCleanupMousePositionsTimer()
+    {
+        var timer = new System.Timers.Timer();
 
-		timer.Interval = 15;
-		timer.Enabled = true;
-	}
+        timer.Elapsed += (_, _) =>
+        {
+            _mousePositions
+                .FindAll(x => x.AddedAt < (DateTime.Now - TimeSpan.FromSeconds(15)))
+                .ForEach(x => _mousePositions.Remove(x));
+            StateHasChanged();
+        };
 
-	/// <summary>
-	/// Sets repeating timer to show latency on screen.
-	/// </summary>
-	private void InitializeLatencyTimer()
-	{
-		var timer = new System.Timers.Timer();
+        timer.Interval = 15;
+        timer.Enabled = true;
+    }
 
-		timer.Elapsed += async (sender, elapsed) =>
-		{
-			latency = await realtime.Socket!.GetLatency();
-			presence!.Track(new BasePresence());
-			StateHasChanged();
-		};
+    /// <summary>
+    /// Sets repeating timer to show latency on screen.
+    /// </summary>
+    private void InitializeLatencyTimer()
+    {
+        var timer = new System.Timers.Timer();
 
-		timer.Interval = 2000;
-		timer.Enabled = true;
-	}
+        timer.Elapsed += async (_, _) =>
+        {
+            _latency = await Realtime.Socket!.GetLatency();
+            _presence!.Track(new BasePresence());
+            StateHasChanged();
+        };
 
-	/// <summary>
-	/// Keeps track of current count of users.
-	/// </summary>
-	/// <param name="sender"></param>
-	/// <param name="args"></param>
-	private void HandlePresenceSync(object? sender, EventArgs? args)
-	{
-		var state = presence!.CurrentState;
-		userCount = state.Keys.Count;
+        timer.Interval = 2000;
+        timer.Enabled = true;
+    }
 
-		Console.WriteLine($"Online: {JsonConvert.SerializeObject(state.Keys)}");
-		StateHasChanged();
-	}
+    /// <summary>
+    /// Keeps track of current count of users.
+    /// </summary>
+    /// <param name="sender"></param>
+    /// <param name="eventType"></param>
+    private void HandlePresenceSync(IRealtimePresence sender, IRealtimePresence.EventType eventType)
+    {
+        var state = _presence!.CurrentState;
+        _userCount = state.Keys.Count;
 
-	/// <summary>
-	/// Keeps track of the list of active users, updating positions if the user already exists.
-	/// </summary>
-	/// <param name="sender"></param>
-	/// <param name="args"></param>
-	private void HandleMousePositionBroadcastReceived(object? sender, EventArgs? args)
-	{
-		var item = mousePositionBroadcast?.Current();
+        Console.WriteLine($"Online: {JsonConvert.SerializeObject(state.Keys)}");
+        StateHasChanged();
+    }
 
-		if (item == null) return;
+    /// <summary>
+    /// Keeps track of the list of active users, updating positions if the user already exists.
+    /// </summary>
+    /// <param name="sender"></param>
+    /// <param name="args"></param>
+    private void HandleMousePositionBroadcastReceived(IRealtimeBroadcast? sender, BaseBroadcast? args)
+    {
+        var item = _mousePositionBroadcast?.Current();
 
-		item.AddedAt = DateTime.Now;
+        if (item == null) return;
 
-		var index = mousePositions.FindIndex(x => x.UserId == item.UserId);
+        item.AddedAt = DateTime.Now;
 
-		if (index > -1)
-			mousePositions[index] = item;
-		else
-			mousePositions.Add(item);
+        var index = _mousePositions.FindIndex(x => x.UserId == item.UserId);
 
-		StateHasChanged();
-	}
+        if (index > -1)
+            _mousePositions[index] = item;
+        else
+            _mousePositions.Add(item);
 
-	/// <summary>
-	/// Keeps track of messages received.
-	/// </summary>
-	/// <param name="sender"></param>
-	/// <param name="args"></param>
-	private void HandleMessageBroadcastReceived(object? sender, EventArgs? args)
-	{
-		var item = messageBroadcast?.Current();
+        StateHasChanged();
+    }
 
-		if (item == null) return;
+    /// <summary>
+    /// Keeps track of messages received.
+    /// </summary>
+    /// <param name="sender"></param>
+    /// <param name="args"></param>
+    private void HandleMessageBroadcastReceived(IRealtimeBroadcast sender, BaseBroadcast? args)
+    {
+        var item = _messageBroadcast?.Current();
 
-		messages.Add(item);
-		messages.Sort((x, y) => x.CreatedAt >= y.CreatedAt ? 1 : -1);
+        if (item == null) return;
 
-		StateHasChanged();
-	}
+        _messages.Add(item);
+        _messages.Sort((x, y) => x.CreatedAt >= y.CreatedAt ? 1 : -1);
 
-	/// <summary>
-	/// Broadcast a message
-	/// </summary>
-	private void SendMessage()
-	{
-		if (string.IsNullOrEmpty(chatMessage)) return;
+        StateHasChanged();
+    }
 
-		messageBroadcast?.Send("message", new Message { UserId = userId, Color = userColor, Content = chatMessage, CreatedAt = DateTime.Now });
-		chatMessage = "";
-		StateHasChanged();
-	}
+    /// <summary>
+    /// Broadcast a message
+    /// </summary>
+    private void SendMessage()
+    {
+        if (string.IsNullOrEmpty(_chatMessage)) return;
 
-	private void HandleChatInputFocus(FocusEventArgs args)
-	{
-		isTyping = true;
-		StateHasChanged();
-	}
+        _messageBroadcast?.Send("message", new Message { UserId = UserId, Color = _userColor, Content = _chatMessage, CreatedAt = DateTime.Now });
+        _chatMessage = "";
+        StateHasChanged();
+    }
 
-	private void HandleChatInputLostFocus(FocusEventArgs args)
-	{
-		isTyping = false;
-		StateHasChanged();
-	}
+    private void HandleChatInputFocus(FocusEventArgs args)
+    {
+        _isTyping = true;
+        StateHasChanged();
+    }
+
+    private void HandleChatInputLostFocus(FocusEventArgs args)
+    {
+        _isTyping = false;
+        StateHasChanged();
+    }
+
 }
